fix Firebox scrollbars + sort/filter layout

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,6 @@
 
         > .columnContents {
             flex-grow: 1;
-            overflow-y: scroll;
         }
     }
     
@@ -83,7 +82,6 @@
 
             .contentHeader {
                 h1 {
-                    margin-bottom: 0;
                     font-size: 4em;
                     font-weight: normal;
                     color: $black;
